default/objects/Naumen_Settings__c/Naumen_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for integration with Naumen CTI</description>
    <label>Naumen Settings</label>
</CustomObject>