default/objects/Naumen_Settings__c/fields/Admin_Emails__c.field-meta.xml
<CustomField>
    <fullName>Admin_Emails__c</fullName>
    <description>Admin Emails who will get errors notifications.</description>
    <inlineHelpText>example: &quot;test1@test.com,test2@test.com&quot;</inlineHelpText>
    <label>Admin Emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>