default/objects/Naumen_Settings__c/fields/IntegrationLogs_Emails__c.field-meta.xml
<CustomField>
    <fullName>IntegrationLogs_Emails__c</fullName>
    <description>Emails to which integration logs Naumen => SF will be sent</description>
    <inlineHelpText>example: &quot;test1@test.com,test2@test.com&quot;</inlineHelpText>
    <label>Integration Logs Emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>