default/objects/Naumen_Settings__c/fields/REST_URL__c.field-meta.xml
<CustomField>
    <fullName>REST_URL__c</fullName>
    <label>REST URL</label>
    <type>Url</type>
</CustomField>