default/objects/Naumen_Settings__c/fields/REST_Username__c.field-meta.xml
<CustomField>
    <fullName>REST_Username__c</fullName>
    <description>Credentials for Naumen REST API</description>
    <label>REST Username</label>
    <length>50</length>
    <type>Text</type>
</CustomField>