default/objects/Naumen_Settings__c/fields/Supervisor_Emails__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Emails__c</fullName>
    <description>Supervisor Emails who will get info notifications in certain cases.</description>
    <inlineHelpText>example: &quot;test1@test.com,test2@test.com&quot;</inlineHelpText>
    <label>Supervisor Emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>