default/objects/Naumen_Settings__c/fields/Uploaded_Records_Owner__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_Records_Owner__c</fullName>
    <description>Id of the user which should be set as an owner of records after uploading them to Naumen</description>
    <inlineHelpText>User Id</inlineHelpText>
    <label>Uploaded Records Owner</label>
    <length>18</length>
    <type>Text</type>
</CustomField>