default/objects/Naumen_Settings__c/fields/UploadResultsRecievers_Emails__c.field-meta.xml
<CustomField>
    <fullName>UploadResultsRecievers_Emails__c</fullName>
    <description>Emails to which upload results will be sent while uploading SF records to naumen autocall cases (Naumen Supervisor Panel uploading functionality)</description>
    <inlineHelpText>example: &quot;test1@test.com,test2@test.com&quot;</inlineHelpText>
    <label>Upload Results Recievers Emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>