default/objects/Naumen_Settings__c/fields/Websocket_URL__c.field-meta.xml
<CustomField>
    <fullName>Websocket_URL__c</fullName>
    <description>wss URL for Softphone</description>
    <label>Websocket URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>